kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-microsite-test
  namespace: nextjs-microsite-test
  labels:
    app.kubernetes.io/name: nextjs-microsite-test
    app.kubernetes.io/managed-by: platform-engineering
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nextjs-microsite-test
